kubernetes/certified-kubernetes-administrator-with-practice-tests/16-networking-ingress/ingress.yml
Layer 7 Load Balancer

# --------------------
# Ingress Controller
# --------------------

- GCP (mantenido por k8s)
- Nginx (mantenido por k8s)
- Contour
- HaProxy
- Traefik
- Istio

# Nginx

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx-ingress
  template:
    metadata:
      labels:
        name: nginx-ingress
    spec:
      containers:
      - name: nginx-ingress-controller
        image: quay.io/kubernetes-ingress-controller/\
               nginx-ingress-controller:0.21.0
        args:
          - /nginx-ingress-controller
          - --configmap=$(POD_NAMESPACE)/nginx-configuration
        ports:
          - name: http
            containerPort: 80
          - name: https
            containerPort: 443


# Hay que pasarle un configMap
kind: ConfigMap
apiVersion: v1
metadata:
  name: nginx-configuration

# Servicio

apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    name: nginx-ingress

# Tambien hay que crear un ServiceAccount


# --------------------
# Ingress Resource
# --------------------

Reglas y configs que se van a aplicar. Forwards, etc


Supongo 2 apps: /wear y /video

ingress-wear.yaml
-----------------
# 1 solo servicio
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear
spec:
  # donde sera routeado el trafico
  backend:
    serviceName: wear-service
    servicePort: 80

# kubectl get ingress


ingress-wear-watch.yaml
-----------------------
# 2 servicios
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear-watch

spec:
  rules:
  - http:
    paths:
    - path: /wear
      backend:
        serviceName: wear-service
        servicePort: 80

    - path: /watch
      backend:
        serviceName: watch-service
        servicePort: 80

# Con dos dominions wear.my-online-store.com y 
# watch.my-online-store.com 

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear-watch

spec:
  rules:
  - host: wear.my-online-store.com
    http:
      paths:
      - backend:
          serviceName: wear-service
          servicePort: 80

  - host: watch.my-online-store.com
    http:
      paths:
      - backend:
          serviceName: watch-service
          servicePort: 80



# --------------------
# Ingress Rewrite
# --------------------

http://<ingress-service>:<ingress-port>/watch --> http://<watch-service>:<port>/
Without the rewrite-target option, this is what would happen:
http://<ingress-service>:<ingress-port>/watch --> http://<watch-service>:<port>/watch

Notice watch and wear at the end of the target URLs. 
The target applications are not configured with /watch or /wear paths. 
They are different applications built specifically for their purpose, 
so they don't expect /watch or /wear in the URLs.

To fix that we want to "ReWrite" the URL when the request 
is passed on to the watch or wear applications

For example: replace(path, rewrite-target)
In our case: replace("/path","/")

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: critical-space
  annotations:
    # Target URI where the traffic must be redirected
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /pay
        backend:
          serviceName: pay-service
          servicePort: 8282

replace("/something(/|$)(.*)", "/$2")

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: rewrite
  namespace: default
spec:
  rules:
  - host: rewrite.bar.com
    http:
      paths:
      - backend:
          serviceName: http-svc
          servicePort: 80
        path: /something(/|$)(.*)
